--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What_2_do?</title>
     <link rel="stylesheet" href="/styles.css" class="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="script.js"></script>
     <script src="https://kit.fontawesome.com/13e4364fd4.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <h1>What_2_do?</h1>
+    </header>
+    <main>
+        <div class="projectContainer">
+            <h2>To Do</h2>
+        </div>
+    </main>
+    <footer>
+        <ul>
+            <li><a href="http://">Github</a></li>
+            <li><a href="http://">Instagram</a></li>
+        </ul>
+    </footer>
 </body>
+
 </html>
