Created Form and button
Created the input and used jquery to add it to ordered list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <main>
         <div class="projectContainer">
             <h2>To Do</h2>
+            <form name="list">
+                <input type="text" name="listItem"/>
+                <div id="button"><i class="fa-solid fa-list"></i></div>
+            </form>
+            <ol></ol>
         </div>
     </main>
     <footer>
