--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="/styles.css" class="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -23,12 +25,19 @@
     </header>
     <main>
         <div class="projectContainer">
-            <h2>To Do</h2>
-            <form name="list">
-                <input type="text" name="listItem"/>
-                <div id="button"><i class="fa-solid fa-list"></i></div>
-            </form>
-            <ol></ol>
+            <div class="title">
+                <h2>TO-DO</h2>
+            </div>
+            <div class="listContainer">
+                <form name="list">
+                    <input type="text" name="listItem" />
+                </form>
+                <div class="buttons">
+                    <div id="button"><i class="fa-solid fa-list"></i></div>
+                    <div id="trash"><i class="fa-solid fa-trash"></i></div>
+                </div>
+                <ol></ol>
+            </div>
         </div>
     </main>
     <footer>
