--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </main>
     <footer>
         <ul>
-            <li><a href="http://">Github</a></li>
-            <li><a href="http://">Instagram</a></li>
+            <li><a target="_blank" href="https://github.com/Newellso1">Github</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/samnewell91/">Instagram</a></li>
         </ul>
     </footer>
 </body>
